--- a/style.css
+++ b/style.css
@@ -155,19 +155,21 @@
 .section-six{
     display: flex;
     background-color: black;
+    height: 70px;
 }
 
  .web{
-    background-color: rgb(0, 0, 0);
     width: 1000px;
     height: 60px;
     margin-right: 450px;
-    margin-left: 200px; 
+    margin-left: 120px; 
+    margin-top: 20px;
  }
 .project{
     width: 1000px;
     height: 60px;
-    margin-right: 50px;
-    background-color: rgb(0, 0, 0);
+    margin-right: 90px;
+    margin-left: 40px;
+   margin-top: 20px;
 } 
 
