--- a/style7.css
+++ b/style7.css
@@ -5,13 +5,12 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    content: '';
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(115deg,rgba(81, 81, 90, 0.8),rgba(39, 39, 43, 0.418)),
-    url(https://www.processmaker.com/wp-content/uploads/2020/10/citizen-developer-scaled.jpg);
+    background-image: linear-gradient(115deg,rgba(79, 79, 102, 0.8),rgba(19, 19, 126, 0.418)),
+    url(./image/photo1.jpg);
     background-size: cover;
     background-repeat: unset;
     background-position: center;
